force-app/main/default/objects/Training_Rate__c/Training_Rate__c.object-meta.xml
<CustomObject>
    <description>Training Rates stores standardized educator compensation rates based on training type, educator profile, contract level, and delivery method.</description>
    <label>Training Rate</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Rates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>