force-app/main/default/objects/Training_Rate__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Captures any specific comment applicable for a certain rate.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>