force-app/main/default/objects/Training_Rate__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Indicates the Contract Level of a trainer.</description>
    <label>Contract Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>CC Level 1</fullName>
                <isActive>false</isActive>
                <label>CC Level 1</label>
            </value>
            <value>
                <fullName>CC Level 2</fullName>
                <isActive>false</isActive>
                <label>CC Level 2</label>
            </value>
            <value>
                <fullName>CPT Level 2</fullName>
                <isActive>false</isActive>
                <label>CPT Level 2</label>
            </value>
            <value>
                <fullName>CPT Level 3</fullName>
                <isActive>false</isActive>
                <label>CPT Level 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>