force-app/main/default/objects/Training_Rate__c/fields/Current_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Current_Therapy__c</fullName>
    <description>Indicates the current therapy for the patient related to training.</description>
    <label>Current Therapy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Daily Injections</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pump Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>