force-app/main/default/objects/Training_Rate__c/fields/Educator_Type__c.field-meta.xml
<CustomField>
    <fullName>Educator_Type__c</fullName>
    <description>Indicates the training format and/or the educator related to the training.</description>
    <label>Educator Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>