force-app/main/default/objects/Training_Rate__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Indicates the product for which the training is scheduled.</description>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omnipod 5</fullName>
            </value>
            <value>
                <fullName>DASH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>