force-app/main/default/objects/Training_Rate__c/fields/Rate_Additional_Patient__c.field-meta.xml
<CustomField>
    <fullName>Rate_Additional_Patient__c</fullName>
    <description>Indicates the amount applicable for reimbursement for additional participants, in case of group events.</description>
    <label>Rate Additional Patient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>