force-app/main/default/objects/Training_Rate__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>Indicates the event to which reimbursement is applicable.</description>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Observation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>