force-app/main/default/objects/Training_Rate__c/fields/Training_Method__c.field-meta.xml
<CustomField>
    <fullName>Training_Method__c</fullName>
    <description>Indicates the mode of delivery for the training.</description>
    <label>Training Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live Virtual</fullName>
            </value>
            <value>
                <fullName>Live In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>