force-app/main/default/objects/Training_Rate__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <description>Indicates the type of training.</description>
    <label>Training Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Pod Training</fullName>
            </value>
            <value>
                <fullName>Insulin Start Training</fullName>
            </value>
            <value>
                <fullName>Pre-Pod + Insulin Start Training</fullName>
            </value>
            <value>
                <fullName>Follow-up Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>