force-app/main/default/objects/Training_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rate_Type__c</columns>
    <columns>Educator_Type__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Training_Method__c</columns>
    <columns>Current_Therapy__c</columns>
    <columns>Product__c</columns>
    <columns>Training_Type__c</columns>
    <columns>Rate__c</columns>
    <columns>Rate_Additional_Patient__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Training Rates</label>
</ListView>